# py10x

./: .coveragerc  .gitignore  =  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALLATION.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  conftest.py  constraints.txt  f.py  f.pyi  pyproject.toml  pyproject.toml.rej  pytest.ini  requirements.new  requirements.txt  ruff.toml  serialize_depth_probe.py  x  z  z.uv  zz  zzs  zzz  zzzs
.claude/: settings.json
.github/: CODEOWNERS
.github/scripts/: resolve-sibling-branch.sh
.github/workflows/: build.yml  ci.yml  refresh-constraints.yml
core_10x/: __init__.py  basket.py  calendar.py  concrete_resource.py  concrete_traits.py  conftest.py  curve.py  data_domain.py  data_domain_binder.py  directory.py  entity.py  entity_filter.py  env_vars.py  environment_variables.py  exec_control.py  global_cache.py  ibis_store.py  logger.py  named_constant.py  nucleus.py  package_manifest.py  package_refactoring.py  process_context.py  py_class.py  rc.py  rdate.py  rel_db.py  resource.py  roman_number.py  scenario.py  sec_keys.py  trait.py  trait_definition.py  trait_filter.py  trait_method_error.py  traitable.py  traitable_cli.py  traitable_heir.py  traitable_id.py  ts_store.py  (+8 more)
core_10x/apps/: admin_save_user_credentials.py  runme_1st_app.py  user_init.py  user_status.py
core_10x/attic/: data_domain.py  data_domain_binder.py  entity.py  package_manifest.py
core_10x/backbone/: backbone_store.py  backbone_traitable.py  backbone_user.py  bound_data_domain.py  namespace.py  security_keys.py  vault.py
core_10x/code_samples/: _package_manifest.py  directories.py  person.py
core_10x/experimental/: data_protocol_ex.py
core_10x/jit/: getter_compiler.py  optimization_helper.py  tcc_compiler.py  trait_getter_cython_compiler.py  trait_getter_jax_compiler.py  trait_getter_numba_compiler.py  traitable_compiler.py  traitable_method_optimizer.py  traitable_optimizer.py
core_10x/manual_tests/: basket_test.py  basketable_hierarchy_test.py  calendar_test.py  ctor_update_bug.py  debug_graph_on.py  debug_graphoff_inside_graph_on.py  enum_bits_test.py  env_vars_trivial_test.py  existing_instance_bug.py  existing_traitable.py  k10x_test1.py  logger_test.py  named_constant_test.py  named_traitable_test.py  nucleus_trivial_test.py  polars_test.py  py_class_test.py  rc_test.py  rdate_test.py  reference_serialization_bug.py  resource_trivial_test.py  scenario_test.py  store_uri_test.py  test_ui_nodes.py  trait_definition_test.py  trait_filter_test.py  trait_flag_modification_test.py  trait_modification_bug.py  traitable_as_of_test.py  traitable_cli_test.py  traitable_heir_test.py  traitable_history_demo.py  traitable_history_test.py  traitable_serialization_test.py  traitable_trivial_test.py  trivial_graph_test.py  ts_class_association_test.py  ts_trivial_test.py  vault_test.py  verifier_test.py
core_10x/testlib/: duckdb_store.py  fixtures.py  ibis_store.py  strict.py  stub_logger.py  test_store.py  traitable_history_tests.py  ts_store_transaction_tests.py  ts_tests.py  vault_env.py
core_10x/unit_tests/: conftest.py  test_basket.py  test_bundle.py  test_concrete_traits.py  test_converters.py  test_core_version.py  test_curve.py  test_cyclic_embedded_serialization.py  test_directory.py  test_documentation.py  test_environment_variables.py  test_filters.py  test_global_cache.py  test_graph.py  test_graph_deps.py  test_logger.py  test_named_constant.py  test_nucleus.py  test_package_refactoring.py  test_py_class.py  test_rc.py  test_rdate.py  test_rel_db.py  test_resource.py  test_scenario.py  test_trait.py  test_trait_definition.py  test_trait_method_error.py  test_trait_modification.py  test_traitable.py  test_traitable_cli.py  test_traitable_history.py  test_traitable_id.py  test_traitable_ref_serialization.py  test_ts_store.py  test_ts_union.py  test_ui_nodes.py  test_user_onboarding.py  test_vault.py  test_vault_utils_passwords.py  (+4 more)
core_10x/vault/: sec_keys.py  security_keys_old.py  vault.py  vault_traitable.py  vault_user.py
dev_10x/: README.md  __init__.py  constraints.py  pytest_plugin.py  uv_run.py  uv_sync.py  xx_ci.py  xx_helpers.py  xx_plan.py  xx_promote.py
dev_10x/docs/: rc-branch-promotion.md
dev_10x/unit_tests/: test_constraints.py  test_uv_sync.py  test_xx_ci.py  test_xx_plan.py  test_xx_promote.py  test_xx_promote_e2e.py  test_xx_tooling_guards.py  test_xx_utils.py
docs/: OPEN_SOURCE_IP_CHECKLIST.md  USER_ONBOARDING_AUTH.md
infra_10x/: __init__.py  duckdb_store.py  ibis_store.py  mongodb_admin.py  mongodb_store.py  mongodb_utils.py
infra_10x/manual_tests/: mongo_helper_perf_test.py  test_misc.py  test_mongo_driver.py  test_prepare_filter_and_pipeline.py
infra_10x/testlib/: mongo_collection_helper.py
infra_10x/unit_tests/: conftest.py  test_copy_to.py  test_duckdb_store.py  test_mongo_db.py  test_mongo_history.py  test_version.py
scripts/: cloud_mongo.sh  cloud_setup.sh
ui_10x/: choice.py  collection_editor.py  concrete_trait_widgets.py  entity_stocker.py  platform.py  platform_interface.py  py_data_browser.py  table_header_view.py  table_view.py  trait_editor.py  trait_widget.py  traitable_editor.py  traitable_view.py  utils.py
ui_10x/apps/: collection_editor_app.py
ui_10x/examples/: _guess_word_data.py  collection_editor.py  date_selector.py  entity_stocker.py  guess_word.py  message_box.py  multi_choice.py  price_simulator.py  py_data_browser.py  radiobox.py  single_choice.py  style_sheet.py  trivial_entity_editor.py
ui_10x/qt6/: concrete_trait_widgets.py  conftest.py  mac_os_global_commit_filter.py  platform_implementation.py  utils.py
ui_10x/rio/: browser_helpers.py  component_builder.py  conftest.py  platform_implementation.py  style_sheet.py
ui_10x/unit_tests/: conftest.py  test_platform.py
xx_common/: README.md  basket.py  conftest.py  curve.py  cxx_curve.py  event.py  event_processor.py  py_curve.py  rdate.py  roman_number.py  xxcalendar.py  xxcommon_env_vars.py
xx_common/manual_tests/: basket_test.py  bcurve_test.py  calendar_test.py  (+1 more)
(+81 files in other folders)
