[project]
name = "py10x-core"
description = "10x Platform Core"
dynamic = ["version"]
authors = [
    { name = "10X CONCEPTS LLC", email = "py10x@10x-software.org" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "py10x-kernel (>=0.1.9,<0.2.0)",
    "py10x-infra (>=0.1.9,<0.2.0)",
    "importlib-resources (>=6.5.2,<6.6.0)",
    "numpy (>=2.2.2,<2.3.0)",
    "python-dateutil (>=2.9.0,<2.10.0)",
    "cryptography>=45.0.7,<46.1.0",
    "pymongo (>=4.7.3)",
    "typing-extensions>=4.15.0",
    "scipy>=1.15.3",
    "keyring>=25.6.0",
    "requests>=2.32.5",
    "hatchling>=1.27.0",
    "hatch-build-scripts>=1.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = [
    "alt-pytest-asyncio==0.9.4",
    "asyncio-atexit>=1.0.1,<2.0",
    "hatchling>=1.27.0",
    "hatch-build-scripts>=1.0.0",
    "licensecheck>=2025.1.0",
    "playwright*",
    #"pre-commit>=3.1,<5.0",
    "pytest>=8.3.4,<10.0",
    "pytest-cov>=6.0,<8.0",
    "pytest-mock>=3.5.11,<4.0.0",
    "ruff>=0.13,<0.16",
    "setuptools_scm>=9.2.2",
    "tomlkit>=0.13.0",
    "uv>=0.9",
]
rio = [
    "rio-ui==0.12",
    "matplotlib~=3.10.6",
    "webview-proc>=0.1.0rc6",
    "aiofiles>=24.1",
]
qt = [
    "PyQt6 (==6.8.1)",
    "PyQt6-Qt6 (==6.8.2)",
    "PyQt6_sip (==13.10.0)",
]

[project.urls]
Homepage = "https://github.com/10x-software/py10x"
Repository = "https://github.com/10x-software/py10x"
Issues = "https://github.com/10x-software/py10x/issues"
Documentation = "https://github.com/10x-software/py10x#readme"

[build-system]
requires = ["hatchling>=1.17.0","hatch-vcs","hatch-build-scripts","playwright"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["core_10x", "dev_10x", "infra_10x", "ui_10x"]
#exclude = [ "**/*_tests/**" ]

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [ "playwright install --with-deps chromium" ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "dev_10x/version.py"


[project.scripts]
uv-sync = "dev_10x.uv_sync:main"
