[project]
name = "py10x-core"
description = "10x Platform Core"
dynamic = ["version"]
authors = [
    { name = "10X CONCEPTS LLC", email = "py10x@10x-software.org" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "py10x-kernel (>=0.2.1rc32,<0.2.1rc33)",
    "py10x-infra (>=0.2.1rc29,<0.2.1rc30)",
    "importlib-resources (>=6.5.2,<6.6.0)",
    "numpy>=2.2.2,<2.5.0",
    "python-dateutil (>=2.9.0,<2.10.0)",
    "cryptography>=45.0.7,<49.1.0",
    "pymongo (>=4.7.3)",
    "typing-extensions>=4.15.0",
    "scipy>=1.15.3",
    "keyring>=25.6.0",
    "requests>=2.32.5",
    "hatchling>=1.27.0",
    "hatch-build-scripts>=1.0.0",
    "polars>=1.38.1",
    "ibis-framework[postgres]>=12.0.0",
    "adbc-driver-manager>=1.10.0",
    "psutil>=5.9.7",
    "uuid6>=2025.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = [
    "alt-pytest-asyncio==0.9.5",
    "asyncio-atexit>=1.0.1,<2.0",
    "hatchling>=1.27.0",
    "hatch-build-scripts>=1.0.0",
    "licensecheck>=2025.1.0",
    "playwright>=1.55,<1.57",
    #"pre-commit>=3.1,<5.0",
    "pytest>=8.3.4,<10.0",
    "pytest-cov>=6.0,<8.0",
    "pytest-mock>=3.5.11,<4.0.0",
    "ruff>=0.13,<0.16",
    "setuptools-scm>=9.2.2",
    "tomlkit>=0.13.0",
    "packaging>=24.0", # version/specifier logic for xx-promote
    "uv>=0.11.20,<0.12",
    "ibis-framework[duckdb]>=12.0.0",
    "adbc-driver-manager>=1.10.0",
    "scikit-build-core>=0.12.2", # C++ build backend (incremental, no-isolation)
    "cmake>=3.27", # persistent toolchain for import-time incremental rebuilds
    "ninja>=1.11", # persistent toolchain for import-time incremental rebuilds (Linux/macOS)
    "editables>=0.6", # editable install support
]
rio = [
    "rio-ui==0.12.2",
    "matplotlib>=3.10.6,<3.12.0",
    "webview-proc>=0.1.0rc6",
    "aiofiles>=24.1",
]
qt = [
    "PyQt6 (==6.8.1)",
    "PyQt6-Qt6 (==6.8.2)",
    "PyQt6_sip (==13.10.0)",
]
jit = [
    "jax>=0.10.1",
    "numba>=0.65.1",
    "cython>=3.2.4",
    "tccbox>=2025.10.27",
]

[project.urls]
Homepage = "https://github.com/10x-software/py10x"
Repository = "https://github.com/10x-software/py10x"
Issues = "https://github.com/10x-software/py10x/issues"
Documentation = "https://github.com/10x-software/py10x#readme"

[project.entry-points.pytest11]
py10x_core = "dev_10x.pytest_plugin"

[project.scripts]
uv-sync                         = "dev_10x.uv_sync:main"
uv-run                          = "dev_10x.uv_run:main"
xx-constraints                  = "dev_10x.constraints:main"
xx-promote                      = "dev_10x.xx_promote:main"
xx-user-init                    = "core_10x.apps.user_init:main"
xx-user-status                  = "core_10x.apps.user_status:main"
xx-admin-save-user-credentials  = "core_10x.apps.admin_save_user_credentials:main"

[build-system]
requires = ["hatchling>=1.17.0","hatch-vcs","hatch-build-scripts","playwright>=1.55,<1.57"]
build-backend = "hatchling.build"

[tool.dev_10x.siblings]
py10x-kernel = { path = "../cxx10x/core_10x" }
py10x-infra  = { path = "../cxx10x/infra_10x" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["core_10x", "dev_10x", "infra_10x", "ui_10x", "xx_common"]
#exclude = [ "**/*_tests/**" ]

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [ "playwright install chromium" ]

[tool.hatch.version]
source = "vcs"
raw-options = { git_describe_command = "git describe --dirty --tags --long --match 'v*'" }

[tool.hatch.build.hooks.vcs]
version-file = "dev_10x/version.py"
